<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F7FE"
    tools:context=".controller.MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/jost_black"
        android:gravity="center"
        android:text="@string/plant_catalog"
        android:textColor="#403F3F"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="464dp"
        android:fontFamily="@font/jost_black"
        android:gravity="center"
        android:text="@string/popular"
        android:textColor="#403F3F"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="320dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/login_auth"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_gravity="center|left"
            android:layout_marginLeft="15dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="center|left"
            android:hint="@string/search"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textColorHint="#6F989898"
            android:textSize="16sp"
            tools:ignore="DuplicateIds,RtlHardcoded" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="25dp"
        android:layout_height="18dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457"
        app:srcCompat="@drawable/vector"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="47dp"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/cardView3"
        app:srcCompat="@drawable/group_5"
        tools:layout_editor_absoluteY="105dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/jost_semibold"
        android:gravity="center"
        android:shadowColor="#000000"
        android:text="@string/all"
        android:textColor="#403F3F"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="62dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/jost_semibold"
        android:gravity="center"
        android:shadowColor="#000000"
        android:text="@string/outdoor"
        android:textColor="#403F3F"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="69dp"
        android:layout_height="27dp"
        app:srcCompat="@drawable/rectangle_17"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="164dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="56dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/jost_semibold"
        android:gravity="center"
        android:shadowColor="#000000"
        android:text="@string/indoor"
        android:textColor="#403F3F"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="62dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/jost_semibold"
        android:gravity="center"
        android:shadowColor="#000000"
        android:text="@string/office"
        android:textColor="#403F3F"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="62dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/jost_semibold"
        android:gravity="center"
        android:shadowColor="#000000"
        android:text="@string/garden"
        android:textColor="#403F3F"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="200sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20sp"
                android:orientation="vertical" />
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>