<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F7FE"
    tools:context=".controller.AuthAct">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="323dp"
        android:layout_height="46dp"
        android:fontFamily="@font/jost"
        android:gravity="center"
        android:shadowColor="#000000"
        android:text="@string/create_account"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.218" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="323dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/jost_black"
        android:gravity="center"
        android:shadowColor="#000000"
        android:text="@string/signin"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/button2"
        android:layout_width="360dp"
        android:layout_height="40dp"
        app:cardBackgroundColor="#63BF50"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881"
        tools:ignore="ExtraText,MissingConstraints">>

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="360dp"
        android:layout_height="55dp"
        app:cardBackgroundColor="#FEFEFE"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.112"
        tools:ignore="MissingConstraints,NotSibling">

        <EditText
            android:id="@+id/password_auth"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_gravity="center|left"
            android:layout_marginLeft="15dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="center|left"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:textColorHint="#6F979797"
            android:textSize="16sp"
            tools:ignore="DuplicateIds,RtlHardcoded,TextFields" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="360dp"
        android:layout_height="55dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.084"
        tools:ignore="DuplicateIds,MissingConstraints">

        <EditText
            android:id="@+id/login_auth"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_gravity="center|left"
            android:layout_marginLeft="15dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="center|left"
            android:hint="Login"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textColorHint="#6F989898"
            android:textSize="16sp"
            tools:ignore="DuplicateIds,RtlHardcoded"
            android:autofillHints="" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>